@@ -1438,19 +1438,7 @@ extern char item_db_db[32];
 extern char item_db2_db[32];
 extern char mob_db_db[32];
 extern char mob_db2_db[32];
-extern char login_db[32];
-
-extern char login_db_level[32];
-extern char login_db_account_id[32];
-
-extern char gm_db[32];
-extern char gm_db_level[32];
-extern char gm_db_account_id[32];
-
-extern int read_gm_interval;
-
 extern char char_db[32];
-
 extern char mail_db[32];
 
 #endif /* not TXT_ONLY */
