@@ -1,6 +1,9 @@
 Date	Added
 
 2006/10/11
+	* Removed useless inter_athena settings (they were doing absolutely
+	  nothing): read_gm_interval, gm_db, gm_db_level, gm_db_account_id,
+	  use_new_sql_db [Skotlex]
 	* Renamed delay_dependon_dex to delay_dependon_agi, made agi now reduce
 	  aftercast delay instead of dex if so specified (skill.conf) [Skotlex]
 	* Added the config setting sg_angel_skill_ratio (skill.conf) [Skotlex]
